# EvoHarness

./: .gitignore  DESIGN.md  PROCESS.md  README.md  RUNBOOK.md  pyproject.toml
docs/: index.html
meta/: __init__.py  __main__.py  config.py  core.py  import_job.py  notebook.py  proposer.py  run_iteration.py  runner.py  surfaces.py  traces.py
meta/configs/: kira_tbench2.toml
results/: EXPERIMENT.md  final_summary.json
results/baseline/: baseline_summary.json  task_cases.json
results/iter_001_branch_001/: eval_results.json  proposal.json
results/iter_001_branch_001/harness/: pyproject.toml
results/iter_001_branch_002/: agent.py  eval_results.json  proposal.json
results/iter_001_branch_002/harness/prompt-templates/: terminus-kira.txt
results/iter_001_branch_003/: proposal.json
results/iter_002_base/: eval_results.json
results/notebook/: dead_ends.md  findings.md  surface_risk.md
results/regression_retries/: retry_results.json
